--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
+  <head>
 <tittle>mariaeduarda no github</tittle>
+  </head>
 <body>
 <h1>esse e o site da duda, experimentando o github</h1>
 </body>
