--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-<tittle>mariaeduarda no github</tittle>
+    <title>mariaeduarda no github</title>
   </head>
 <body>
-<h1>esse e o site da duda, experimentando o github</h1>
+    <h1>esse e o site da duda, experimentando o github</h1>
 </body>
 </html>
